TestCases/PodSecurityPolicy/blockPrivilegedPorts/example/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
